--- a/wp-content/themes/Bootstrap-on-WordPress-master/style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/style.css
@@ -42,3 +42,80 @@ Tags: 			babobski, bootstrap, basic theme
     border: 1px solid #ccc;
     border-top: none;
   }
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Work+Sans:wght@300&display=swap');
+
+  :root{
+    --accent: #de677e;
+    --light: #B4BFE3;
+    --lightText: #97A0BE;
+    --dark: #373756;
+    --overlayStart: rgba(55,55,86,.9);
+    --overlayEnd: rgba(55,55,86,.7);
+    --ease: all 0.3s ease 0s;
+   }
+   *{
+     box-sizing:border-box;
+     padding: 0;
+     margin: 0;
+
+   }
+   body{
+     background-color: var(--dark);
+
+   }
+   h1,i{
+     color: var(--light);
+
+   }
+   p,a{
+     color: var(--lightText);
+     text-decoration: none;
+   }
+
+   h1{
+     font-family: "Work Sans",sans-serif;
+     font-size: 72px;
+     font-weight: 300;
+   }
+
+  .wrapper{
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas:"top";
+  }
+   .top{
+    grid-area: top;
+    background-image: linear-gradient(to right,var(--overlayStart),var(--overlayEnd)),url(images/fundal.jpg);
+    background-size: cover;
+    background-position:center;
+    background-repeat:no-repeat ;
+    display: grid;
+    grid-template-columns: 1fr 600px 600px 1 fr;
+    grid: gap 20px;
+    grid-template-areas:
+    ". top_content top_profile ." ;
+
+  }
+  .top_content {
+    grid-area: top_content;
+    align-self: center;
+    justify-self: center;
+    padding :10px;
+  }
+  .subtitle{
+    font-family: "Open Sans",sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-bottom:  20px;
+  }
+  .title{
+    margin-bottom: 80px;
+  }
+  
+  .top_profile {
+    grid-area: top_profile;
+  }
+  
