--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-login-style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-login-style.css
@@ -47,7 +47,7 @@ body.login {
 
 @media (prefers-color-scheme: dark) {
   body.login {
-    background-image: url("../images/debut_dark.png");
+    background-image: url("../images/fundal.jpg");
     background-color: #333;
   }
 
@@ -72,7 +72,7 @@ body.login {
     color: whitesmoke;
   }
   .login h1 a {
-    background-image: url("../images/admin_logo_darkmode.png");
+    background-image: url("../images/elem.png");
     background-size: contain;
   }
   .login label {
