--- a/wp-content/themes/Bootstrap-on-WordPress-master/style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/style.css
@@ -1,12 +1,3 @@
-/*!
-Theme Name: 	Bootsrap on WordPress
-Theme URI: 		https://bootstraponwordpress.com/
-Description: 	Bootstrap 5 on Wordpress
-Version: 		3.0.6
-Author: 		Babobski
-Author URI: 	https://www.babobski.nl
-Tags: 			babobski, bootstrap, basic theme
-*/
 
 .tab {
     overflow: hidden;
@@ -42,6 +33,7 @@ Tags: 			babobski, bootstrap, basic theme
     border: 1px solid #ccc;
     border-top: none;
   }
+
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Work+Sans:wght@300&display=swap');
 
   :root{
@@ -114,8 +106,17 @@ Tags: 			babobski, bootstrap, basic theme
   .title{
     margin-bottom: 80px;
   }
-  
+
   .top_profile {
     grid-area: top_profile;
+    align-self: center;
+    background-image:url(images/elem.png);
+    width:526px;
+    height: 526px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
   }
+
   
