--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
@@ -1,30 +1,76 @@
-body{
-    margin: 0;
-    padding: 0;
-    background:url(elem.png);
-    background-size:cover ;
-    background-position:center;
-    font-family: sans-serif;
-    
+.required{
+    text-decoration-color: rgb(31, 255, 1);
 }
-.loginbox{
-    width: 320px;
-    height: 420px;
-    background: #000;
-    color: #fff;
-    top:50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    box-sizing:border-box;
-    padding: 70px 30px;
+.register{
+    text-size-adjust: 22px;
+    color: white;
+    font-size: 30px;
+}
+.input-text{
+    border: 2px solid rgb(31, 255, 1);
+    font-size: 2rem;
+    font-weight: 100;
+    font-family: 'Lato';
+    padding: 10px;
+}
+.input-email{
+    border: 2px solid rgb(31, 255, 1);
+    font-size: 2rem;
+    font-weight: 100;
+    font-family: 'Lato';
+    padding: 10px;
+}
 
+.input-password{
+    border: 2px solid rgb(31, 255, 1);
+    font-size: 2rem;
+    font-weight: 100;
+    font-family: 'Lato';
+    padding: 10px;
 }
-.avatar{
-    width: 100px;
-    height: 100px;
-    border-radius:50%;
-    position:absolute;
-    top:-50px;
-    left:calc(50% - 50px);
+.tabcontent{
+    color: rgb(255, 255, 255);
+    margin: 50px auto;
+    text-align: center;
+    width: 600px;
+    border: none;
+    text-align-last: center;
+}
+.btn button ur-submit-button {
+    padding: 10px;
+    font-size: 2rem;
+    font-family: 'Lato';
+    font-weight: 100;
+    background: rgb(31, 255, 1);
+    color: rgb(31, 255, 1);
+    border: rgb(31, 255, 1);
+}
+.tablinks{
+    font-size: 1rem;
+    border: 2px solid rgb(31, 255, 1);
+}
+.user-registration{
+    border: 2px solid rgb(31, 255, 1);
+    text-size-adjust: 2px;
+}
+body{
+    background: url(../images/font.jpeg);
+    margin: 50px auto;
+    text-align: center;
+    width: 800px;
+   
+   
+}
+.tablinks{
+    border: 3px solid rgb(31, 255, 1);
+    text-align: center;
+    font-weight: 200;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.tab{
+    color:black
 }
