--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
@@ -41,7 +41,9 @@
     font-family: 'Lato';
     font-weight: 200;
     color: black; 
-    border: 3px solid black ;
+    border: 3px solid black ;  
+    box-shadow: 10px 10px 5px #fff;
+
 }
 .button{
     
@@ -63,6 +65,8 @@
 .user-registration{
     border: 2px solid black;
     text-size-adjust: 3px;
+    color: black;
+
 }
 body{
     background: url(../images/WhatsApp\ Image\ 2021-08-03\ at\ 14.35.18.jpeg);
@@ -91,9 +95,12 @@ body{
     border: 3px solid black;
     font-weight: bold;
     font-size: 2rem;
+    box-shadow: 10px 10px 5px rgb(117, 117, 117);
+    background: #fff;
     
 }
 .tabcontent{
-    background:white;
+    background:rgb(255, 255, 255);
     color:black !important;
+    
 }
