--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-register-style.css
@@ -81,7 +81,7 @@ body{
     border: 3px solid black;
     text-align: center;
     font-weight: bold;
-    font-family: 'Lato';
+    font-family: 'Helvetica';
     font-size: 1.2rem;
     word-spacing: 10px;
 }
