--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-login-style.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-login-style.css
@@ -89,7 +89,7 @@ body.login {
   .login input[type=password] {
     background-color: #333;
     border-color: #333;
-    color: rgb(255, 255, 255);
+    color: #ccc;
   }
   .login .button-primary {
     background:#333;
@@ -119,7 +119,7 @@ body{
   text-align:center;
   font-size: 2rem;
   font-weight: 100;
-  font-family: 'Lato';
+  font-family: 'Helvetica';
   color: black;
 }
 .h2, h2{
