custom(societati+ apply comp)

--- a/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-page-check-applications.css
+++ b/wp-content/themes/Bootstrap-on-WordPress-master/css/custom-page-check-applications.css
@@ -5,7 +5,7 @@
   padding: 40px;
   margin: 70px;
   margin-left: 20px;
-  background-image: linear-gradient( rgba(182, 105, 5, 0.979), rgb(238, 238, 18));
+  background-color: #fff;
   box-shadow: 0 20px 0 0 black;
   border-top-left-radius:15px;
   border-top-right-radius:15px;
